change load directory